--- a/translations/sv.json
+++ b/translations/sv.json
@@ -875,6 +875,10 @@
     "march_2022_challenge_name_non_flowering_seed": "Icke-blommande fröväxtsutmaning",
     "march_2022_mission_1": "Hitta 3 växtarter i dessa grupper:\n\n-Klass barrväxter;\n-Klass kottepalmer;\n-Klass ginkoväxter",
     "march_2022_description_reproduce_from_non_flowers": "Barrväxter, kottepalmer och ginkgoväxter reproducerar alla med andra strukturer än blommor. Barrväxter har kottar och både kottepalmer och ginkgoväxter har kottliknande strukturer som släpper ut eller tar emot pollen. Många av dessa blomlösa arter odlas vanligen för sitt utseende eller virke (för barrväxter).",
-    "march_2022_action_find_wild_or_intentional": "Hittade du några vilda växter eller var de avsiktligt planterade av människor? Om de var planterade, vilka egenskaper tror du gjorde dem eftertraktade för plantering?"
+    "march_2022_action_find_wild_or_intentional": "Hittade du några vilda växter eller var de avsiktligt planterade av människor? Om de var planterade, vilka egenskaper tror du gjorde dem eftertraktade för plantering?",
+    "april_2022_challenge_name_wildflower": "Vilda blommors utmaning",
+    "april_2022_mission_1": "Hitta 10 arter blomväxter (underdivision Angiospermae)",
+    "april_2022_description_many_flowers_have_colors_shapes": "Många blommor har färger och former som lockar insekter att besöka blommorna. Blommor producerar pollen som kan överföras från en blomma till en annan av djur, vind eller vatten.",
+    "april_2022_action_pollen_visible_anther": "Ibland är pollen synligt på blommans ståndare. Om du vidrör det med fingret, ser du pollen på ditt finger? Vad tror du pollinerar denna art?"
   }
 }
