--- a/translations/en.json
+++ b/translations/en.json
@@ -6,8 +6,8 @@
     "no_species": "Looks like there haven’t been many species observed nearby! Try changing your location or broadening the species filter.",
     "input_location_above_map": "No location found; input a location name above to load the map and search for species nearby",
     "error_alert_location_services": "To continue, turn on location services in your device settings",
-    "species_nearby_requires_location": "Species nearby requires your location. Please enable location in settings",
-    "species_nearby_requires_android_accuracy": "Species nearby requires your location. Please check that location services are enabled.",
+    "species_nearby_requires_location": "Viewing nearby species requires your location. Please enable location in settings",
+    "species_nearby_requires_android_accuracy": "Viewing nearby species requires your location. Please check that location services are enabled.",
     "choose_location_on_map": "CHOOSE LOCATION ON MAP"
   },
   "get_started": {
