--- a/translations/en.json
+++ b/translations/en.json
@@ -271,7 +271,8 @@
     "species_observed": "Species Observed",
     "species_nearby": "SPECIES NEARBY IN THIS CHALLENGE",
     "no_species_nearby": "We found no species nearby in this challenge that you haven't already observed",
-    "species_nearby_internet_error": "We need the Internet to generate nearby species."
+    "species_nearby_internet_error": "We need the Internet to generate nearby species.",
+    "badge_name_my_garden_2022": "BEE BADGE"
   },
   "results": {
     "observed_species": "You observed a new species!",
