--- a/translations/en.json
+++ b/translations/en.json
@@ -272,7 +272,7 @@
     "species_nearby": "SPECIES NEARBY IN THIS CHALLENGE",
     "no_species_nearby": "We found no species nearby in this challenge that you haven't already observed",
     "species_nearby_internet_error": "We need the Internet to generate nearby species.",
-    "badge_name_my_garden_2022": "BEE BADGE"
+    "badge_name_my_garden_2022": "MY GARDEN BADGE"
   },
   "results": {
     "observed_species": "You observed a new species!",
