--- a/translations/nl.json
+++ b/translations/nl.json
@@ -256,7 +256,7 @@
     "november_description": "Mensen zijn altijd van bomen en bossen afhankelijk geweest voor hun overleving. Ze geven ons schone lucht, voedsel, onderdak en hout. Ze nemen koolstofdioxide op uit de lucht en leggen het in hout of bodem vast Door tijd door te brengen tussen bomen voelen we ons beter in geest en lichaam. We hebben ze nu nog meer dan ooit nodig net als veel andere levende wezens. Seek! de bomen in jouw omgeving en geniet van de voordelen!",
     "august_description": "Grote dieren uit de prairievlakten verliezen hun woonplaats aan landbouwgrond maar ze zijn niet het enige wilde leven dat door onze voedselproductie wordt getroffen. Insectenaantallen nemen dramatisch af op onze planeet, deels omdat landbouwgewassen hun habitats vervangen en vervolgens worden besproeid met \n gewasbeschermingsmiddelen. We hebben insectenbestuivers nodig om onze gewassen en wilde planten tot bloei te laten komen en veel amfibieën, reptielen, vogels, een paar planten en zoogdieren zijn afhankelijk van insecten voor voedsel. Zoek de insecten om je heen en toon ze wat liefde!",
     "september_description": "Zoet water is essentieel voor al het landleven en zoetwaterhabitats zijn het biotoop van meer dan 10 procent van alle bekende dieren en bijna de helft van alle bekende vissoorten. Rivieren, stroompjes en meren maken het dieren mogelijk om grote afstanden te reizen om hun levenscyclus te voltooien. Seek! vijvers, beken, rivieren en meren in jouw omgeving en kijk welke zoetwatersoorten je kunt vinden.",
-    "october_description": "De zeeën bedekken enorme delen van onze planeet en zonder moderne technologie zouden mensen het heel moeilijk vinden om deze enorme uitgestrekte vlakten te doorkruisen. Veel vogelsoorten doen dit echter elk jaar. Miljoenen vogels trekken van het ene land naar het andere om te ontsnappen aan koud weer en voedsel te vinden. Door bij te houden wanneer dieren trekken begrijpen we hoe de klimaatverandering de natuurlijke wereld beïnvloedt. Seek! vogels bezoeken die je eigen omgeving bezoeken en ontdekken waar ze hun tijd doorbrengen.",
+    "october_description": "De zeeën bedekken enorme delen van onze planeet en zonder moderne technologie zouden mensen het heel moeilijk vinden om deze enorme uitgestrekte vlakten te doorkruisen. Veel vogelsoorten doen dit echter elk jaar. Miljoenen vogels trekken van het ene land naar het andere om te ontsnappen aan koud weer en voedsel te vinden. Door bij te houden wanneer dieren trekken kan het ons helpen te begrijpen hoe de klimaatverandering de natuurlijke wereld beïnvloedt. Zoek vogels die je eigen omgeving bezoeken en ontdek waar ze hun tijd doorbrengen.",
     "december_description": "Klimaatverandering is niet alleen gevolgen voor de bevroren werelden op onze planeet Polen. Stijgende temperaturen en veranderende weerpatronen kunnen leiden tot de soorten te verplaatsen uit habitats die ongemakkelijk worden en in gebieden die ze eerder niet kon steunen. Het kan ook betekenen dat wijzigingen gelinkt aan seizoenen (bekend als 'fenologie') zoals bladval, ontploffende bloemknoppen en de bloei op verschillende tijdstippen plaatsvindt en verschilt per plaats. Andere soorten kunnen hierdoor problemen krijgen die moeilijk te voorspellen zijn. Seek! naar het lokale plantenleven en zie hoe je lokale omgeving verandert.",
     "mission_1_june": "Vind 6 verschillende planten (producenten)",
     "mission_2_june": "Vind willekeurig 3 sprinkhanen, krekels, treksprinkhanen, vlinders, motten, rupsen, schrikvogels of plantenetende zoogdieren (herbivoren)",
@@ -386,7 +386,7 @@
     "header_1": "Hoe werkt het?",
     "how_works": "Het determinatiemodel van de Seek werkt direct met behulp van de boom van het leven.\n\nElke stip op de determinatiebalk vertegenwoordigt een taxonomisch niveau in de boom van het leven. Als Seek in staat is de soorten die je bekijkt trefzeker te determineren op elk niveau, dan zal het een nieuw punt toevoegen aan de balk. Wanneer het organisme is geïdentificeerd op soortsniveau, neem dan een foto!",
     "header_2": "Tips en Trucs",
-    "tips": "Seek werkt het beste met foto's die goed belicht zijn en de soort goed weergeven dus probeer verschillende hoeken uit totdat je de juiste afbeelding krijgt.\n\nSeek leert nog steeds, dus als de puntjes zich niet allemaal kunnen vullen kijk je waarschijnlijk naar een organisme dat niet veel voorkomt in de iNaturalist database. Je kunt waarnemingen plaatsen op iNaturalist om Seek te helpen deze beter te leren herkennen! Binnenkort kun je naar iNaturalist posten vanuit Seek.",
+    "tips": "Seek werkt het beste met foto's die goed belicht zijn en de soort goed weergeven dus probeer verschillende hoeken uit totdat je de juiste afbeelding krijgt.\n\nSeek leert nog steeds, dus als de puntjes zich niet allemaal kunnen vullen kijk je waarschijnlijk naar een organisme dat niet veel voorkomt in de iNaturalist database. Je kunt waarnemingen plaatsen op iNaturalist om Seek te helpen deze beter te leren herkennen!",
     "header_3": "Onthoud",
     "tip_1": "Wees altijd bewust van je omgeving en doe voorzichtig!",
     "tip_2": "Eet niets dat je in de natuur vindt.",
@@ -672,7 +672,7 @@
   },
   "settings": {
     "header": "Seek's Camera",
-    "common_names": "Toon Gewone namen",
+    "common_names": "Toon Lokale Namen",
     "scientific_names": "Toon Wetenschappelijke namen",
     "donate": "Doneer",
     "donate_header": "Help en ondersteun iNaturalist",
@@ -706,7 +706,7 @@
     "mission_2_june_2020": "Vind 3 vogels van de orde Passeriformes (zangvogels)",
     "mission_3_june_2020": "Vind 1 insect van de orde Coleoptera (Kevers)",
     "june_2020_description": "De natuur is veerkrachtig en overal om ons heen. Van steden tot het platteland, planten en dieren vinden een manier om te gedijen. Zelfs in stedelijke gebieden leven planten, vogels en insecten samen met ons.",
-    "action_june_2020": "Wist je dat je wetenschappelijke namen kunt tonen in plaats van algemene namen in de Seek camera? Ga naar de instellingen pagina vanuit het menu om de weergave te wijzigen van algemene namen naar wetenschappelijke namen!",
+    "action_june_2020": "Wist je dat je wetenschappelijke namen kunt tonen in plaats van lokale namen in de Seek camera? Ga naar de instellingen pagina vanuit het menu om de weergave te wijzigen van lokale namen naar wetenschappelijke namen!",
     "river": "Rivier Uitdaging",
     "mission_1_july_2020": "Vind 2 vissen of amfibieën",
     "mission_2_july_2020": "Vind 3 watervogels uit de orders Anseriformes, Charadriiformes, Coraciiformes, Gaviiformes, Gruiiformes, Pelecaniformes, Phoenicopteriformes, Podicipediformes, Procellariformes, Sphenisciformes & Suliformes",
@@ -798,10 +798,10 @@
     "june_2021_mission_5": "Vind 2 verschillende gewervelden (vogels, zoogdieren, reptielen, amfibieën of vissen)",
     "june_2021_mission_6": "Vind 1 insect",
     "june_2021_mission_7": "Vind 1 spinachtige",
-    "june_2021_challenge_name": "Behoud Uitdaging",
+    "june_2021_challenge_name": "Natuurbehoud Uitdaging",
     "june_2021_description": "Wij allen kunnen, ongeacht onze leeftijd of ervaring, een positief effect hebben op het behoud van de biodiversiteit. We kunnen bijvoorbeeld helpen om te zorgen voor een bepaalde plaats zoals ons eigen erf, een beschermd gebied of een lokaal park. Het beschermen van de natuur begint met het leren over planten, schimmels en dieren op de plaatsen waar je om geeft. Je uitdaging deze maand is om in je tuin of een lokaal park te kijken en zo veel mogelijk biodiversiteit te inventariseren.",
     "june_2021_action": "Deze maand ga je iets leren over elk soort die je documenteert, waaronder of de soort inheems is of geïntroduceerd. Ga eens al je waarnemingen van de afgelopen vier maanden na: welke verschillen heb je opgemerkt in biodiversiteit en de menselijke voetafdruk gedurende deze periode en op de verschillende plaatsen die je hebt verkend? Doe iets om een lokale plek (zoals je tuin of een park) geschikter te maken voor inheemse soorten. Schrijf je doel op en maak er een foto van en deel het met ons door #NatGeoSeekChallenge op Twitter te gebruiken!",
-    "june_2021_badge_name": "Behoud Badge",
+    "june_2021_badge_name": "Natuurbehoud Badge",
     "june_2021_photographer": "Foto door: Keith Ladzinski / National Geographic"
   },
   "challenges_all": {
@@ -870,7 +870,7 @@
     "november_2021_mission_1": "Vind 5 soorten in deze groepen:\n\n-Vogels (behalve niet-vliegende groepen);\nGevelugelde en insekten met rudimentaire vleugels",
     "november_2021_description_ability_to_fly": "De mogelijkheid om te vliegen is onafhankelijk van elkaar geëvolueerd in vogels, insekten en vleermuizen. Onder vogels zijn sommige soorten vleugelloos geworden maar ze stammen van vliegende voorouders af. Hetzelfde geldt voor veel insekten en alle insekten zijn vrij van vluchten voor ten minste een deel van hun levenscyclus.",
     "november_2021_action_were_they_flighted": "Zijn de dieren die je hebt gevonden in het vliegende gedeelte van hun levenscyclus terechtgekomen? Zo ja, waar hebben ze tijdens hun leven volgens jou moeten vliegen? Migreren ze?",
-    "december_2021_challenge_name_vertebrate_challenge": "Gewervelde landroofdieruitdaging",
+    "december_2021_challenge_name_vertebrate_challenge": "Gewervelde landroofdier uitdaging",
     "december_2021_mission_1": "Vind 2 soorten gewervelden uit:\n\n-Haviken, Arenden, Wouwen en verwanten\n-Valken en Caracaras;\n-Uilen;\n-Vleesetende Zoogdieren;\n-Slangen en Hagedissen;",
     "december_2021_description_vertebrate_animals_have": "Gewervelde dieren hebben ruggewervels en interne skeletten. Roofdieren doden en eten prooidieren. Net als alle dieren zijn ze aangepast aan hun voeding. Veel roofdieren hebben bijvoorbeeld scherpe klauwen, tanden of snavels die hen in staat stellen de prooi vast te houden of te verscheuren.",
     "december_2021_action_think_about_predators": "Denk aan de roofdieren die je hebt waargenomen. Welke aanpassingen hebben ze om te jagen en te doden? Hebben de twee soorten die je hebt gezien vergelijkbare aanpassingen voor de jacht?"
@@ -903,24 +903,24 @@
     "june_2022_action_busy_pollinators": "Drukke bestuivers zoals bijen en andere insecten houden onze lokale plantenpopulaties gezond en divers. Leer meer over de geheime levens van bijen door de nieuwe film te zien van My Garden of a Thousand Bees op PBS Natuur. En plant je eigen wilde bloemen om te zien welke bestuivers ze aantrekken. #PlantWildflowers #PlantWildeBloemen",
     "july_2022_challenge_name_exoskeleton": "Exoskelet Uitdaging",
     "july_2022_mission_1": "Vind 5 soorten geleedpotigen (Arthropoda) ",
-    "july_2022_description_insects_crustaceans": "Insekten, schaaldieren, spinachtigen, duizendpoten en miljoenpoten hebben allemaal exoskeletten of “uitwendige skeletten”. In tegenstelling tot mensen en andere gewervelden hebben ze geen intern skelet dus spieren zijn gehecht aan het exoskelet en maken bewegingen mogelijk. Exoskeletten bieden ook bescherming tegen uitdroging en ze hebben gevoelsorganen die vergelijkbaar zijn met menselijke huid.",
+    "july_2022_description_insects_crustaceans": "Insekten, schaaldieren, spinachtigen, duizendpoten en miljoenpoten hebben allemaal exoskeletten of “uitwendige skeletten”. In tegenstelling tot mensen en andere gewervelden hebben ze geen intern skelet en duszijn de spieren gehecht aan het exoskelet en maken zo bewegingen mogelijk. Exoskeletten bieden ook bescherming tegen uitdroging en ze hebben gevoelsorganen die vergelijkbaar zijn met menselijke huid.",
     "july_2022_action_molted_exoskeleton": "Heb je ooit een leeg verveld uitwendig skelet gevonden? Exoskeletten groeien niet samen met het dier, dus ze moeten vervellen als ze te groot zijn geworden.",
-    "august_2022_challenge_name_seed_dispersal": "Seed Dispersal Challenge",
-    "august_2022_mission_1": "Find 3 species from:\n\n-Class Pinopsida (Conifers);\nSubphylum Angiospermae (Flowering plants)",
-    "august_2022_mission_2": "Find 3 species from:\n\n-Class Aves (Birds);\nClass Mammalia (Mammals)\nFamily Formicidae (Ants)",
-    "august_2022_description_seeds_are_a_lifestage": "Seeds are a lifestage of plants that can be easily moved. Many conifers and flowering plants have adapted fruits and seeds to be transported by wind, water, or animals. Many species of birds, mammals, and even ants can disperse seeds.",
-    "august_2022_action_largest_species_seed_dispersing": "What is the largest species of seed dispersing animal near you? What kinds of seeds can it disperse? When animals swallow seeds whole, you may be able to find seeds in scat (also known as poop). Observations of scat count as evidence of an organism, but sometimes scat can be difficult to identify.",
-    "september_2022_challenge_name_photosynthesis": "Photosynthesis Challenge",
-    "september_2022_mission_1": "Find 5 plants",
-    "september_2022_description_plants_convert_light": "Plants convert light energy into sugars through photosynthesis. Leaf color is shaped by the different plant pigments that capture different wavelengths of light. When leaves change color, the chlorophylls (green pigments) fade and carotenoids (yellow pigments) and Anthocyanins (red and purple pigments) are visible.",
-    "september_2022_action_photosynthesis": "Photosynthesis converts carbon dioxide from the atmosphere into other molecules needed for sustaining life. Respiration is the chemical process of releasing the energy originally stored in photosynthesis.",
-    "october_2022_challenge_name_parasite": "Parasite Challenge",
-    "october_2022_mission_1": "Find 3 species from:\n\nOrder Ixodida (Ticks);\nFamily Culicidae (Mosquitos);\nOrder Siphonaptera (Fleas);\nParvorder Phthiraptera (Lice);\nOrder Santalales (Mistletoes);\nGenus Cuscuta (Dodders);\nFamily Orobanchaceae (Broomrapes)",
-    "october_2022_description_parasitic_organisms": "Parasitic organisms feed on other organisms without killing them. Arthropods like ticks, mosquitos, fleas, and lice have adapted to feed on vertebrates, including humans and/or domestic animals. There are also parasitic plants that do not photosynthesize because they rely on sugar produced by their host plant.",
-    "october_2022_action_parasites": "Parasites can also spread diseases while moving from host to host. What diseases can be spread by parasites in your area? What steps can you take to protect yourself from infection?",
-    "november_2022_challenge_name_urban_nature": "Urban Nature Challenge",
-    "november_2022_mission_1": "Find 4 species from:\n\nFamily Brassicaceae (Mustards);\nFamily Lamiaceae (Mints);\nFamily Poaceae (Grasses);\nOrder Blattodea (Cockroaches and Termites);\nOrder Rodentia (Rodents);\nOrder Columbiformes (Pigeons and Doves);\nFamily Corvidae (Crows, Jays, and Magpies);\nGenus Passer (Sparrows);\nGenus Acridotheres (Mynas);\nInfraorder Gekkota (Geckos)",
-    "november_2022_description_some_species_well_adapted": "Some species are well-adapted to developed areas. Even in cities, you can find wild biodiversity in pavement cracks, empty lots, visiting gardens, and even in our homes (perhaps as unwanted visitors).",
-    "november_2022_action_change_location": "Change the location for “species seen nearby” to search a city far from you. What species are seen near there? Are any of them the same or similar to species seen near you?"
+    "august_2022_challenge_name_seed_dispersal": "Zaad verspreidings Uitdaging",
+    "august_2022_mission_1": "Vind 3 soorten uit:\n\n-Klasse Pinopsida (Coniferen);\nOnderstam Angiospermae (Bedektzadigen)",
+    "august_2022_mission_2": "Vind 3 soorten uit:\n\n-Klasse Aves (Vogels);\nKlasse Mammalia (Zoogdieren)\nFamilie Formicidae (Mieren)",
+    "august_2022_description_seeds_are_a_lifestage": "Zaden zijn een levensfase van planten die gemakkelijk vervoerd kunnen worden. Veel coniferen en bedektzadigen hebben vruchten en zaden aangepast zodat ze door wind, water of dieren getransporteerd kunnen worden. Veel soorten vogels, zoogdieren en zelfs mieren kunnen zaden verspreiden.",
+    "august_2022_action_largest_species_seed_dispersing": "Wat is de grootste zaadverspreidende diersoort in jouw buurt? Wat voor soorten zaden kan het verspreiden? Wanneer dieren zaden in hun geheel inslikken kan jij zaden vinden in uitwerpselen (ook bekend als poep). Waarnemingen van uitwerpselen tellen als bewijs van een organisme, maar soms is moeilijk te achterhalen van wie de uitwerpselen zijn.",
+    "september_2022_challenge_name_photosynthesis": "Fotosynthese Uitdaging",
+    "september_2022_mission_1": "Vind 5 plantensoorten",
+    "september_2022_description_plants_convert_light": "Planten zetten lichtenergie om in suikers door middel van fotosynthese. De kleur van het blad wordt gevormd door de verschillende plantenpigmenten die verschillende golflengtes van het licht opnemen. Wanneer bladeren van kleur veranderen vervaagt het bladgroen (groene pigmenten) en worden de carotenotenoïden (gele pigmenten) en de Anthocyanen (rode en paarse pigmenten) zichtbaar.",
+    "september_2022_action_photosynthesis": "Fotosynthese zet kooldioxide van de atmosfeer om in andere moleculen die nodig zijn voor het behoud van het leven. Verbranding is het chemische proces van het vrijgeven van de energie die oorspronkelijk in de fotosynthese is opgeslagen.",
+    "october_2022_challenge_name_parasite": "Parasieten Uitdaging",
+    "october_2022_mission_1": "Find 3 species from:\n\nOrde Ixodida (Teken);\nFamilie Culicidae (Steekmuggen);\nOrde Siphonaptera (Vlooien);\nParvorder Phthiraptera (Dierluizen);\nOrde Santalales (Maretakachtigen);\nGenus Cuscuta (Warkruiden);\nFamilie Orobanchaceae (Bremrapen)",
+    "october_2022_description_parasitic_organisms": "Parasitaire organismen voeden zich met andere organismen zonder ze te doden. Arthropoda zoals teken, muggen, vlooien en luizen hebben zich aangepast om zich te voeden op gewervelden, waaronder mensen en/of huisdieren. Er zijn ook parasitaire planten die geen fotosynthese toepassen zijn omdat ze vertrouwen op door hun gastplant geproduceerde suikers.",
+    "october_2022_action_parasites": "Parasieten kunnen ook ziekten verspreiden terwijl ze van gastheer naar gastheer verhuizen. Welke ziekten kunnen worden verspreid door parasieten in je omgeving? Welke stappen kan je nemen om jezelf te beschermen tegen infectie?",
+    "november_2022_challenge_name_urban_nature": "Stadsnatuur Uitdaging",
+    "november_2022_mission_1": "Vind 4 soorten uit de:\n\nFamilie Brassicaceae (Kruisbloemenfamilie);\nFamilie Lamiaceae (Lipbloemenfamilie);\nFamilie Poaceae (Grassen);\nOrde Blattodea (Kakkerlakken en Termieten);\nOrde Rodentia (Knaagdieren );\nOrde Columbiformes (Duifachtigen);\nFamilie Corvidae (Kraaien);\nGenus Passer (Mussen);\nGenus Acridotheres (Mynas);\nInfraorder Gekkota (Gekko's)",
+    "november_2022_description_some_species_well_adapted": "Sommige soorten zijn goed aangepast aan ontwikkelde gebieden. Zelfs in steden is er sprake van een wilde biodiversiteit in barsten in de stoep, braakliggende terreinen, bezoeken van tuinen en zelfs in onze huizen (misschien als ongewenste bezoekers).",
+    "november_2022_action_change_location": "Verander de locatie voor \"Soorten in de buurt\" om een stad ver van jou te doorzoeken. Welke soorten worden er in de buurt gezien? Is één van hen hetzelfde of vergelijkbaar met soorten in de jouw buurt?"
   }
 }
